@@ -1,3 +1,8 @@
+2021-06-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Generalize handling of return values in frame pointer.
+
 2021-06-13 Visenri
 
 	* src/stm8/gen.c,
